--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -133,7 +133,7 @@ jobs:
     - name: Yarn Cache
       uses: actions/cache@v2
       with:
-        path: ./ui-cra/node_modules
+        path: ${{ github.workspace }}/ui-cra/node_modules
         key: ${{ runner.os }}-${{ env.NODE_MODULES_CACHE_NAME }}-${{ hashFiles('**/yarn.lock') }}
         restore-keys: |
           ${{ runner.os }}-${{ env.NODE_MODULES_CACHE_NAME }}-
@@ -141,8 +141,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.WGE_NPM_GITHUB_TOKEN }}
       run: |
-        pwd
-        echo "${{ github.workspace }}"
         make GITHUB_BUILD_TOKEN=${GITHUB_BUILD_TOKEN} ui-cra/.uptodate
     - name: Login to Docker Hub
       uses: docker/login-action@v1
