--- a/charts/mccp/templates/clusters-service/configmap.yaml
+++ b/charts/mccp/templates/clusters-service/configmap.yaml
@@ -14,7 +14,12 @@ data:
   CAPI_REPOSITORY_PATH: {{ .Values.config.capi.repositoryPath | quote }}
   CAPI_TEMPLATES_REPOSITORY_API_URL: {{ .Values.config.capi.repositoryApiURL | quote }}
   CAPI_TEMPLATES_REPOSITORY_BASE_BRANCH: {{ .Values.config.capi.baseBranch | quote }}
-  {{ if not .Values.config.checkpoint.enabled }}
+  {{- if not .Values.config.checkpoint.enabled }}
   CHECKPOINT_DISABLE: 1
-  {{ end }}
- 
+  {{- end }}
+  {{- if .Values.config.oidc.enabled }}
+  WEAVE_GITOPS_AUTH_ENABLED: "true"
+  OIDC_ISSUER_URL: {{ .Values.config.oidc.issuerURL | quote }}
+  OIDC_REDIRECT_URL: {{ .Values.config.oidc.redirectURL | quote }}
+  OIDC_COOKIE_DURATION: {{ .Values.config.oidc.cookieDuration | quote }}
+  {{- end }}
