Revert "Rm nginx-ingress"
This reverts commit 82f0e65b41d614132daa3ed9e8d28e0930d2cec4.

--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -36,16 +36,6 @@ fluxCli:
   image: ghcr.io/fluxcd/flux-cli:v0.19.1
   binPath: /usr/local/bin/flux
 
-service:
-  type: ClusterIP
-  ports:
-    http: 8000
-  targetPorts:
-    http: 8000
-  nodePorts:
-    http: ""
-    https: ""
-
 config:
   cluster:
     name: default
@@ -78,3 +68,8 @@ nats:
     service:
       type: NodePort
   extraEnvVarsSecret: nats-env-vars-secret
+
+nginx-ingress-controller:
+  ingressClass: mccp-nginx
+  config:
+    ssl-redirect: "false"
