--- a/charts/mccp/Chart.yaml
+++ b/charts/mccp/Chart.yaml
@@ -27,3 +27,6 @@ dependencies:
   - name: nats
     version: "6.1.2"
     repository: "https://charts.bitnami.com/bitnami"
+  - name: nginx-ingress-controller
+    version: "7.6.21"
+    repository: https://charts.bitnami.com/bitnami
