--- a/charts/mccp/templates/clusters-service/service.yaml
+++ b/charts/mccp/templates/clusters-service/service.yaml
@@ -4,54 +4,11 @@ kind: Service
 metadata:
   name: clusters-service
   namespace: {{ .Release.Namespace | quote }}
-  {{- if .Values.service.labels }}
-  labels:
-    {{- include "common.tplvalues.render" (dict "value" .Values.service.labels "context" $) | nindent 4 }}
-  {{- end }}
-  {{- if .Values.service.annotations }}
-  annotations:
-    {{- include "common.tplvalues.render" (dict "value" .Values.service.annotations "context" $) | nindent 4 }}
-  {{- end }}
 spec:
+  ports:
+    - name: http
+      port: 8000
+      targetPort: 8000
   selector:
     app: clusters-service
-  type: {{ .Values.service.type }}
-  {{- if not (empty .Values.service.clusterIP) }}
-  clusterIP: {{ .Values.service.clusterIP | quote }}
-  {{- end }}
-  {{- if .Values.service.externalIPs }}
-  externalIPs: {{- toYaml .Values.service.externalIPs | nindent 4 }}
-  {{- end }}
-  {{- if .Values.service.loadBalancerIP }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP | quote }}
-  {{- end }}
-  {{- if .Values.service.loadBalancerSourceRanges }}
-  loadBalancerSourceRanges: {{- toYaml .Values.service.loadBalancerSourceRanges | nindent 4 }}
-  {{- end }}
-  {{- if .Values.service.externalTrafficPolicy }}
-  externalTrafficPolicy: {{ .Values.service.externalTrafficPolicy | quote }}
-  {{- end }}
-  {{- if .Values.service.healthCheckNodePort }}
-  healthCheckNodePort: {{ .Values.service.healthCheckNodePort }}
-  {{- end }}
-  ports:
-    {{- if not (empty .Values.service.ports.http) }}
-    - name: http
-      port: {{ .Values.service.ports.http }}
-      targetPort: {{ .Values.service.targetPorts.http }}
-      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) (not (empty .Values.service.nodePorts.http)) }}
-      nodePort: {{ .Values.service.nodePorts.http }}
-      {{- else if eq .Values.service.type "ClusterIP" }}
-      nodePort: null
-      {{- end }}
-    {{- end }}
-    {{- if not (empty .Values.service.ports.https) }}
-    - name: https
-      port: {{ .Values.service.ports.https }}
-      targetPort: {{ .Values.service.targetPorts.https }}
-      {{- if and (or (eq .Values.service.type "NodePort") (eq .Values.service.type "LoadBalancer")) (not (empty .Values.service.nodePorts.https)) }}
-      nodePort: {{ .Values.service.nodePorts.https }}
-      {{- else if eq .Values.service.type "ClusterIP" }}
-      nodePort: null
-      {{- end }}
-    {{- end }}
+  type: ClusterIP
