Update helm templates to set the OIDC parameters (#476)
Co-authored-by: Simon <footless@gmail.com>

--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -73,6 +73,18 @@ spec:
                   name: mccp-db-credentials
                   key: password
             {{- end }}
+            {{- if .Values.config.oidc.enabled }}
+            - name: OIDC_CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.config.oidc.clientCredentialsSecret }}
+                  key: clientId
+            - name: OIDC_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: {{ .Values.config.oidc.clientCredentialsSecret }}
+                  key: clientSecret
+            {{- end }}
           volumeMounts:
             - name: flux-cli-volume
               mountPath: /flux-cli
