adds wego-system ns

--- a/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
+++ b/test/utils/data/capi-gitops-cluster-bootstrap-config.yaml
@@ -23,6 +23,7 @@ spec:
               "bootstrap",
               "$(GIT_PROVIDER)",
               "--hostname=$(GIT_PROVIDER_HOSTNAME)",
+              "--namespace=wego-system",
               "--owner=$(GITOPS_REPO_OWNER)",
               "--repository=$(GITOPS_REPO_NAME)",
               "--path=.weave-gitops/clusters/{{ .ObjectMeta.Name }}/system",
