calculate service account name and namespace

--- a/charts/mccp/templates/clusters-service/impersonator.yaml
+++ b/charts/mccp/templates/clusters-service/impersonator.yaml
@@ -17,5 +17,5 @@ roleRef:
   name: impersonator
 subjects:
   - kind: ServiceAccount
-    name: weave-gitops-enterprise-mccp
-    namespace: wego-system
+    name: {{ include "mccp.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace | quote }}
