--- a/ui-cra/package.json
+++ b/ui-cra/package.json
@@ -24,7 +24,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
-    "@weaveworks/weave-gitops": "0.6.1",
+    "@weaveworks/weave-gitops": "/Users/alina/Desktop/projects/weave-gitops/dist/",
     "classnames": "^2.3.1",
     "d3-scale": "3.2.1",
     "d3-time": "^3.0.0",
