--- a/charts/mccp/values.yaml
+++ b/charts/mccp/values.yaml
@@ -76,7 +76,20 @@ nats:
       type: NodePort
   extraEnvVarsSecret: nats-env-vars-secret
 
-nginx-ingress-controller:
-  ingressClass: mccp-nginx
-  config:
-    ssl-redirect: "false"
+service:
+  type: ClusterIP
+  ports:
+    https: 8000
+  targetPorts:
+    https: 8000
+  nodePorts:
+    http: ""
+    https: ""
+    tcp: {}
+    udp: {}
+  clusterIP: ""
+  externalIPs: []
+  loadBalancerIP: ""
+  loadBalancerSourceRanges: []
+  externalTrafficPolicy: ""
+  healthCheckNodePort: 0
