--- a/charts/mccp/templates/clusters-service/deployment.yaml
+++ b/charts/mccp/templates/clusters-service/deployment.yaml
@@ -90,6 +90,8 @@ spec:
               mountPath: /flux-cli
             - name: ui-server-volume
               mountPath: /html
+            - name: clusters-service-tls-volume
+              mountPath: /etc/clusters-service-tls
             {{- if eq .Values.dbConfig.databaseType "sqlite" }}
             - name: database-volume
               mountPath: /var/database
@@ -100,6 +102,10 @@ spec:
       volumes:
       - name: flux-cli-volume
         emptyDir: {}
+      - name: clusters-service-tls-volume
+        secret:
+          secretName: clusters-service-tls
+          optional: true
       - name: ui-server-volume
         emptyDir: {}
       {{- if eq .Values.dbConfig.databaseType "sqlite" }}
