--- a/.github/workflows/acceptance-test.yaml
+++ b/.github/workflows/acceptance-test.yaml
@@ -284,6 +284,7 @@ jobs:
     - name: Get a gitops-binary
       uses: ./.github/actions/gitops-binary
       with:
+        ref: insecure-requests-from-the-cli
         runs-on: ${{ inputs.runs-on }}
         os-name: ${{ inputs.os-name }}
         path: ${{ env.GITOPS_BIN_PATH }}
