--- a/.github/actions/gitops-binary/action.yaml
+++ b/.github/actions/gitops-binary/action.yaml
@@ -38,6 +38,7 @@ runs:
       if: ${{ inputs.ref != '' }}
       with:
         repository: weaveworks/weave-gitops
+        token: ${{ secrets.GITHUB_TOKEN }}
         path: weave-gitops
         ref: ${{ inputs.ref }}
     - name: "build from source"
